2014-02-26  Mark Wielaard  <mjw@redhat.com>

	* linux-proc-maps.c (proc_maps_report): Don't assert on bad input.

2014-02-26  Mark Wielaard  <mjw@redhat.com>

	* elf-from-memory.c (elf_from_remote_memory): Check against p64
	p_type in case ELFCLASS64, not against p32 p_type.

2014-01-17  Petr Machata  <pmachata@redhat.com>

	* relocate.c (relocate_section): Use gelf_fsize instead of relying
	on shdr->sh_entsize.

2014-01-05  Mark Wielaard  <mjw@redhat.com>

	* frame_unwind.c (handle_cfi): Only skip resetting return register
	if the regno is not the actual CIE return address register.

2014-01-02  Mark Wielaard  <mjw@redhat.com>

	* linux-pid-attach.c (dwfl_linux_proc_attach): Use strtol, not atoi.

2013-12-30  Mark Wielaard  <mjw@redhat.com>

	* argp-std.c (parse_opt): Call dwfl_linux_proc_attach and
	dwfl_core_file_attach explicitly.
	* core-file.c (dwfl_core_file_report): Don't call
	__libdwfl_attach_state_for_core implicitly.
	* dwfl_begin.c (dwfl_begin): Remove setting of process_attach_error.
	* dwfl_frame.c (dwfl_pid): Set errno to DWFL_E_NO_ATTACH_STATE, not
	process_attach_error.
	(dwfl_getthreads): Likewise.
	(getthread): Likewise.
	* libdwfl.h (dwfl_core_file_report): Update documentation.
	(dwfl_linux_proc_report): Likewise.
	(dwfl_core_file_attach): New function declaration.
	(dwfl_linux_proc_attach): Likewise.
	* libdwflP.h (struct Dwfl): Remove process_attach_error.
	(__libdwfl_attach_state_for_pid): Removed declaration.
	(__libdwfl_attach_state_for_core): Likewise.
	(dwfl_core_file_attach): New internal declaration.
	(dwfl_linux_proc_attach): Likewise.
	(attach_state_for_core): Renamed to...
	(dwfl_core_file_attach): ...this. Change return type.
	(__libdwfl_attach_state_for_core): Removed.
	* linux-pid-attach.c (struct pid_arg): Add assume_ptrace_stopped.
	(pid_set_initial_registers): Check assume_ptrace_stopped before
	calling ptrace.
	(pid_thread_detach): Likewise.
	(__libdwfl_attach_state_for_pid): Renamed to...